--- a/index.html
+++ b/index.html
@@ -3,14 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML5 Course</title>
+    <style>
+    </style>
 </head>
 <body>
-    <table>
-        <tr><td>Name</td><td>Age</td><td>Team</td></tr>
-        <tr><td>Colleen</td><td>26</td><td>Browns</td></tr>
-      </table>
-      <p>prueba</p>
-      prueba
+    <h1 id="collen"> <mark>Carlos Amelunge</mark></h1>
+    <nav style="color: blue;"> 
+        <a href="#collen">One</a> |
+        <a href="#favoriteFood">Two</a> |
+        <a href="#archivements">Three</a> |
+        <a href="https://www.google.com"><mark> four</mark></a>
+    </nav>
+    <h2 id="favoriteFood">Favorite Foods</h2>
+    <ul>
+        <li> <mark> Pizza</mark> </li>
+        <li> <mark> Hamburguers</mark> </li>
+        <li> <mark> Crab</mark> </li>
+        <li> <mark> Cheesecake</mark> </li>
+    </ul>
+    <h2 id="archivements">Archivements</h2>
+    <label for="file"> Progress in this course (100%)</label>
+    <progress id="file" value="100" max="100"> </progress>
+    <br>
+    <label for="file"> Progress in the Specialization capstone(20%)</label>
+    <progress id="file" value="20" max="100"> </progress>
+    <br>
+    <label for="file"> Progress in life goals (67%)</label>
+    <mark> <progress id="file" value="80" max="100"> </progress> </mark>
+    <br>
+    <h2 >More About Me</h2>
+    <details open>
+        <summary>My Childhood</summary>
+        <p><mark>I grew up in Santa Cruz Bolivia, and my childhod was good.</mark></p>
+    </details> 
+    <br>
+    <img src="http://www.intro-webdesign.com/images/newlogo.png" alt="WD4E logo"><span>This page was created by <mark>Carlos Amelunge</mark>  & Colleen van Lent. 
+        To learn more about web design, visit <a href="http://intro-webdesign.com/">Intro to Web Design. </a> </span>
+    
 </body>
 </html>
